--- a/homework_1/contact.html
+++ b/homework_1/contact.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 <body>
-    <a href="index.html">Главная</a>
-    <a href="catolog.html">Каталог</a>
-    <a href="#">Контакты </a>
+    <a class="nav_link" href="index.html">Главная</a>
+    <a class="nav_link" href="catolog.html">Каталог</a>
+    <a class="nav_link" href="#">Контакты </a>
 
-    <h1>Связаться с нами</h1>
+    <h1 class="title">Связаться с нами</h1>
 
     <form action="">
-        <input type="text" name="" id="" placeholder="Ваше имя"> <br>
-        <input type="email" name="" id="" placeholder="Ваш email"> <br>
-        <input type="text" name="" id="" placeholder="Ваш телефон"> <br>
-        <input type="submit" value="Отправить">
-        <input type="reset" value="Очистить">
+        <input class="form_input" tclass="form_input" ype="text" name="" id="" placeholder="Ваше имя"> <br>
+        <input class="form_input" type="email" name="" id="" placeholder="Ваш email"> <br>
+        <input class="form_input" type="text" name="" id="" placeholder="Ваш телефон"> <br>
+        <input class="form_button" type="submit" value="Отправить">
+        <input class="form_button" type="reset" value="Очистить">
 
     </form>
 
