--- a/homework_1/index.html
+++ b/homework_1/index.html
@@ -8,21 +8,21 @@
     <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 <body>
-    <a href="#">Главная</a>
-    <a href="catolog.html">Каталог</a>
-    <a href="contact.html">Контакты </a>
+    <a class="nav_link" href="#">Главная</a>
+    <a class="nav_link" href="catolog.html">Каталог</a>
+    <a class="nav_link" href="contact.html">Контакты </a>
 
-    <h1 id="main">Главная страница</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, sapiente.</p>
+    <h1 class="title" id="main">Главная страница</h1>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At, sapiente.</p>
 
-    <h2>Добро пожаловать на сайт!</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere aliquam quos officiis 
+    <h2 class="subtitle">Добро пожаловать на сайт!</h2>
+    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere aliquam quos officiis 
         eligendi iste porro, eum error beatae delectus illum!</p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis facilis optio odio 
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis facilis optio odio 
         corporis quo ducimus et hic ea labore consectetur.</p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perferendis maxime omnis fugit 
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perferendis maxime omnis fugit 
         iusto aliquid, quisquam magnam rerum expedita dolorem recusandae in deserunt nesciunt 
         voluptate vero. Impedit, neque. Quo, repudiandae.</p>
     
