changed hw_1 and added files and folders for hw_6

--- a/homework_1/catolog.html
+++ b/homework_1/catolog.html
@@ -16,17 +16,24 @@
 
     <p class="text class="text"">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos vero repellendus, nostrum magni porro minima sapiente eius ullam provident hic placeat amet ex velit asperiores animi sint consequatur totam, quam repudiandae? A quibusdam rerum dicta molestias labore quos fuga est debitis asperiores possimus, voluptates animi iure doloribus ducimus nemo! Animi suscipit eligendi recusandae facere quis inventore alias incidunt? Corporis delectus ipsam perspiciatis porro, velit itaque non accusantium atque praesentium error ea explicabo voluptatem beatae ullam numquam alias reprehenderit culpa, rem soluta. Incidunt soluta distinctio quod laborum hic magni voluptate odit vitae? Nobis, consequatur doloribus aspernatur quam laboriosam rem suscipit minima nisi id quibusdam quae rerum maiores neque modi voluptate? Perspiciatis autem consequuntur aliquam neque qui voluptates rerum consectetur in quo aspernatur, distinctio ut ipsa, dolore inventore harum modi? Dolorum reprehenderit in maxime debitis distinctio nobis expedita et velit est necessitatibus totam consequuntur blanditiis accusamus, odit doloribus error quasi. Libero, accusantium!</p>
 
-    <img class='photo_flower' src="./assets/images/1967.jpg" alt="Розы">
-    <h4>Roses</h4>
-    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> At, voluptate? Minima itaque impedit cumque nulla.</p>
-
-    <img class='photo_flower' src="./assets/images/1968.jpg" alt="Лилии">
-    <h4>Lilies</h4>
-    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Eligendi cumque sit itaque vel dolore molestiae!</p>
-
-    <img class='photo_flower' src="./assets/images/1969.jpg" alt="Подсолнух">
-    <h4>Sunflowers</h4>
-    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Eligendi cumque sit itaque vel dolore molestiae!</p>
-
+    <section class="box_img">
+        <div  class="wrapper_img"> 
+            <img class='photo_flower' src="./assets/images/1967.jpg" alt="Розы">
+            <h4>Roses</h4>
+            <p class="text_descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> At, voluptate? Minima itaque impedit cumque nulla.</p>
+    
+        </div>
+        <div class="wrapper_img">
+            <img class='photo_flower' src="./assets/images/1968.jpg" alt="Лилии">
+            <h4>Lilies</h4>
+            <p class="text_descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Eligendi cumque sit itaque vel dolore molestiae!</p>
+        </div>
+        <div class="wrapper_img">
+            <img class='photo_flower' src="./assets/images/1969.jpg" alt="Подсолнух">
+            <h4>Sunflowers</h4>
+            <p class="text_descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Eligendi cumque sit itaque vel dolore molestiae!</p>
+        </div>
+    </section>
+    
 </body>
 </html>
