--- a/homework_6/index.html
+++ b/homework_6/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,45 @@
     <title>HW_6 Figma</title>
     <link rel="stylesheet" href="assets/style/style.css">
 </head>
+
 <body>
-    
+    <header class="header">
+        <img class="img_head" src="assets/images/Logo.svg" alt="logo">
+
+        <nav>
+            <ul class="menu">
+                <li><a class="menu_home" href="#">Home</a></li>
+                <li><a class="menu_item" href="#">About us</a></li>
+                <li><a class="menu_item" href="#">Services</a></li>
+                <li><a class="menu_item" href="#">Features</a></li>
+                <li><a class="menu_item" href="#">Team</a></li>
+                <li><a class="menu_item" href="#">Blog</a></li>
+                <li><a class="menu_item" href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="intro">
+        <div class="intro_left">
+            <h1 class="intro_title">SEO & Digital Marketing For Your Website.</h1>
+            <p class="intro_text">Provide all kind of seo services and help to improve seo ranking. Globally incubate
+                standards.</p>
+            <div class="intro_buttons_wrapper">
+                <button class="intro_button">Start Now</button>
+                <a class="intro_button_link" href="#">Watch Video</a>
+            </div>
+        </div>
+        <img class="intro_img" src="assets/images/intro.png" alt="pngfind">
+    </section>
+
+    <section class="img_logos">
+        <img src="assets/images/1.svg" alt="1">
+        <img src="assets/images/6.svg" alt="2">
+        <img src="assets/images/3.svg" alt="3">
+        <img src="assets/images/4.svg" alt="4">
+        <img src="assets/images/5.svg" alt="5">
+        <img src="assets/images/6.svg" alt="6">
+    </section>
 </body>
+
 </html>
