in hw_6 added a new task

--- a/homework_6/index.html
+++ b/homework_6/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header container">
         <img class="img_head" src="assets/images/Logo.svg" alt="logo">
 
         <nav>
@@ -26,7 +26,7 @@
         </nav>
     </header>
 
-    <section class="intro">
+    <section class="intro container">
         <div class="intro_left">
             <h1 class="intro_title">SEO & Digital Marketing For Your Website.</h1>
             <p class="intro_text">Provide all kind of seo services and help to improve seo ranking. Globally incubate
@@ -46,6 +46,27 @@
         <img src="assets/images/4.svg" alt="4">
         <img src="assets/images/5.svg" alt="5">
         <img src="assets/images/6.svg" alt="6">
+    </section>
+
+    <section class="icon-content container">
+        <div class="position-icon">
+            <img src="./assets/images/icons/icon_1.svg" alt="icon1">
+            <h3 class="title-icons">Grow Your Business</h3>
+            <p class="text-icons">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <a href="#" class="link-icons">Read More...</a>
+        </div>
+        <div class="icon2 position-icon">
+            <img src="./assets/images/icons/icon_2.svg" alt="icon2">
+            <h3 class="title-icons">Get Quality Ieads</h3>
+            <p class="text-icons">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <a href="#" class="link-icons">Read More...</a>
+        </div>
+        <div class="position-icon">
+            <img src="./assets/images/icons/icon_3.svg" alt="icon3">
+            <h3 class="title-icons">Drive More Sales</h3>
+            <p class="text-icons">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <a href="#" class="link-icons">Read More....</a>
+        </div>
     </section>
 </body>
 
