in hw_6 added analitycs-section

--- a/homework_6/index.html
+++ b/homework_6/index.html
@@ -39,6 +39,7 @@
         <img class="intro_img" src="assets/images/intro.png" alt="pngfind">
     </section>
 
+
     <section class="img_logos">
         <img src="assets/images/1.svg" alt="1">
         <img src="assets/images/6.svg" alt="2">
@@ -46,6 +47,20 @@
         <img src="assets/images/4.svg" alt="4">
         <img src="assets/images/5.svg" alt="5">
         <img src="assets/images/6.svg" alt="6">
+    </section>
+
+    <section class="analitycs-section">
+        <div class="analitycs container">
+            <div class="left-analytics">
+                <h2 class="title-analytics">Perfect Solution For Your Business</h2>
+                <p class="text-analytics">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly
+                    coordinate e-business applications through revolutionary catalysts for chang the Seamlessly
+                    underwhelm
+                    optimal testing procedures.</p>
+                <button class="intro_button">Learn More</button>
+            </div>
+            <img src="./assets/images/macbook.png" alt="macbook">
+        </div>
     </section>
 
     <section class="icon-content container">
@@ -68,6 +83,10 @@
             <a href="#" class="link-icons">Read More....</a>
         </div>
     </section>
+
+
+
+
 </body>
 
 </html>
