--- a/homework_6/index.html
+++ b/homework_6/index.html
@@ -49,7 +49,7 @@
         <img src="assets/images/6.svg" alt="6">
     </section>
 
-    <section class="analitycs-section">
+    <section class="color-section">
         <div class="analitycs container">
             <div class="left-analytics">
                 <h2 class="title-analytics">Perfect Solution For Your Business</h2>
@@ -84,9 +84,55 @@
         </div>
     </section>
 
+    <section class="color-section">
+        <div class="services">
+            <div class="services-start"></div>
+            <h3 class="services-start__title">Why You Should Choose Us.</h3>
+            <p class="services-start__text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly
+                coordinate e-business
+                applications through revolutionary catalysts.</p>
+        </div>
+        <div class="services-cards container">
+            <div class="services-cards__items">
+                <img src="./assets/images/illustration_1.svg" alt="illustration_1">
+                <div class="cards-items__text">
+                    <h3 class="cards-title">Keyword Research</h3>
+                    <p class="cards-text">Business applications through revolutionary catalysts for chang the Seamlessly
+                        underwhelm dures.</p>
+                    <button class="intro_button services-button">
+                        <p>Learn More</p>
+                        <img src="./assets/images/icons/icon_services.svg" alt="icon">
+                    </button>
 
+                </div>
+            </div>
+            <div class="services-cards__items">
+                <img src="./assets/images/illustration_2.svg" alt="illustration_2">
+                <div class="cards-items__text">
+                    <h3 class="cards-title">Seo Optimazadion</h3>
+                    <p class="cards-text">Business applications through revolutionary catalysts for chang the Seamlessly
+                        underwhelm dures.</p>
+                    <button class="intro_button services-button">
+                        <p>Learn More</p>
+                        <img src="./assets/images/icons/icon_services.svg" alt="icon">
+                    </button>
+                </div>
+            </div>
+            <div class="services-cards__items">
+                <img src="./assets/images/illustration_3.svg" alt="illustration_3">
+                <div class="cards-items__text">
+                    <h3 class="cards-title">Social Marketing</h3>
+                    <p class="cards-text">Business applications through revolutionary catalysts for chang the Seamlessly
+                        underwhelm dures.</p>
+                    <button class="intro_button services-button">
+                        <p>Learn More</p>
+                        <img src="./assets/images/icons/icon_services.svg" alt="icon">
+                    </button>
+                </div>
+            </div>
 
-
+        </div>
+    </section>
 </body>
 
 </html>
