--- a/homework_11_12/index.html
+++ b/homework_11_12/index.html
@@ -19,7 +19,7 @@
 
     <section class="brand">
         <div class="brand-wrapper">
-            <img src="./assets/images/man.png" alt="man">
+            <img class="image-man" src="./assets/images/man.png" alt="man">
             <div class="brand-text">
                 <h1 class="brand__text_title">THE BRAND</h1>
                 <p class="brand__text-content">
@@ -53,7 +53,7 @@
         </item>
         <item class="item_4 image-container">
             <img src="./assets/images/ACCESORIES.png" alt="accesories">
-            <div class="accesories-text">
+            <div class="menu-text">
                 <p class="offer-text">LUXIROUS & TRENDY</p>
                 <p class="for-who">ACCESORIES</p>
             </div>
