in hw_12 added part of hw_16

--- a/homework_11_12/index.html
+++ b/homework_11_12/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>homework_11-12</title>
 </head>
 
@@ -134,6 +135,76 @@
 
 
     </section>
+
+    <section class="services">
+        <div class="services-items center">
+            <div class="services-items__item">
+                <img class="delivery-icon" src="./assets/images/delivery_icon.svg" alt="delivery_icon">
+                <h4 class="services-items__title">Free Delivery</h4>
+                <p class="services-items__text">Worldwide delivery on all. Authorit tively morph next-generation
+                    innov
+                    tion with extensive models.
+                </p>
+            </div>
+            <div class="services-items__item">
+                <div class="services-items__item">
+                    <img class="sales-icon" src="./assets/images/sales_icon.svg" alt="sales_icon">
+                    <h4 class="services-items__title">Sales & discounts</h4>
+                    <p class="services-items__text">Worldwide delivery on all. Authorit tively morph next-generation
+                        innov tion with extensive
+                        models.
+                    </p>
+                </div>
+            </div>
+            <div class="services-items__item">
+                <div class="services-items__item">
+                    <img class="quality-icon" src="./assets/images/quality_icon.svg" alt="quality_icon">
+                    <h4 class="services-items__title">Quality assurance</h4>
+                    <p class="services-items__text">Worldwide delivery on all. Authorit tively morph next-generation
+                        innov tion with extensive
+                        models.
+                </div>
+            </div>
+    </section>
+
+    <section class="subscribe">
+        <div class="subscribe-box__img">
+            <img src="./assets/images/subscribe.png" alt="subscribe">
+            <div class="bg"></div>
+            <!-- </div>
+        <img src="./assets/images/subscribe.png" alt="subscribe">
+        <div class="subscribe-items center">
+            <div class="subscribe-items__descr">
+                <img src="./assets/images/face_foto.svg" alt="face_foto">
+                <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
+            </div>
+            <div>
+                <h3>SUBSCRIBE</h3>
+                <p>FOR OUR NEWLETTER AND PROMOTION</p>
+                <form action="">
+                    <input type="email" name="Enter Your Email" id="">
+                    <input type="button" value="Subscribe">
+                </form>
+            </div>
+
+        </div> -->
+
+    </section>
+
+
+    <footer>
+        <div class="footer-wrapper center">
+            <p class="footer-wrapper__text">
+                © 2022 Brand All Rights Reserved.
+            </p>
+            <div class="contacts-icons">
+                <img src="./assets/images/facebook.svg" alt="facebook">
+                <img src="./assets/images/instagram.svg" alt="instagram">
+                <img src="./assets/images/printstnet.svg" alt="printsnet">
+                <img src="./assets/images/twitter.svg" alt="twitter">
+            </div>
+        </div>
+    </footer>
 
 </body>
 
