in hw_12 added part of hw_16

--- a/homework_11_12/index.html
+++ b/homework_11_12/index.html
@@ -168,15 +168,16 @@
     </section>
 
     <section class="subscribe">
-        <div class="subscribe-box__img">
+        <!-- <div class="subscribe-box__img">
             <img src="./assets/images/subscribe.png" alt="subscribe">
             <div class="bg"></div>
-            <!-- </div>
-        <img src="./assets/images/subscribe.png" alt="subscribe">
+        </div> -->
         <div class="subscribe-items center">
             <div class="subscribe-items__descr">
                 <img src="./assets/images/face_foto.svg" alt="face_foto">
-                <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
+                <p class="subscribe-items__descr__text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span
+                        style='font-style:italic;'>a
+                        pulvinar</span> purus condimentum“</p>
             </div>
             <div>
                 <h3>SUBSCRIBE</h3>
@@ -186,8 +187,9 @@
                     <input type="button" value="Subscribe">
                 </form>
             </div>
+        </div>
 
-        </div> -->
+        </div>
 
     </section>
 
