--- a/homework_11_12/index.html
+++ b/homework_11_12/index.html
@@ -168,10 +168,6 @@
     </section>
 
     <section class="subscribe">
-        <!-- <div class="subscribe-box__img">
-            <img src="./assets/images/subscribe.png" alt="subscribe">
-            <div class="bg"></div>
-        </div> -->
         <div class="subscribe-items center">
             <div class="subscribe-items__descr">
                 <img src="./assets/images/face_foto.svg" alt="face_foto">
@@ -179,7 +175,7 @@
                         style='font-style:italic;'>a
                         pulvinar</span> purus condimentum“</p>
             </div>
-            <div>
+            <div class="subscribe-items__form">
                 <h3>SUBSCRIBE</h3>
                 <p>FOR OUR NEWLETTER AND PROMOTION</p>
                 <form action="">
