added all sections

--- a/homework_11_12/index.html
+++ b/homework_11_12/index.html
@@ -178,9 +178,9 @@
             <div class="subscribe-items__form">
                 <h3>SUBSCRIBE</h3>
                 <p>FOR OUR NEWLETTER AND PROMOTION</p>
-                <form action="">
-                    <input type="email" name="Enter Your Email" id="">
-                    <input type="button" value="Subscribe">
+                <form style="display: flex;">
+                    <input type="email" class="form-email" name="email" placeholder="Enter Your Email">
+                    <input type="submit" value="Subscribe" class="form-submit">
                 </form>
             </div>
         </div>
@@ -196,10 +196,10 @@
                 © 2022 Brand All Rights Reserved.
             </p>
             <div class="contacts-icons">
-                <img src="./assets/images/facebook.svg" alt="facebook">
-                <img src="./assets/images/instagram.svg" alt="instagram">
-                <img src="./assets/images/printstnet.svg" alt="printsnet">
-                <img src="./assets/images/twitter.svg" alt="twitter">
+                <button type="button"><img src="./assets/images/facebook.svg" alt="facebook"></button>
+                <button type="button"><img src="./assets/images/instagram.svg" alt="instagram"></button>
+                <button type="button"><img src="./assets/images/pinterest.svg" alt="printsnet"></button>
+                <button type="button"><img src="./assets/images/twitter-brands.svg" alt="twitter"></button>
             </div>
         </div>
     </footer>
