edited with vadidator

--- a/homework_11_12/index.html
+++ b/homework_11_12/index.html
@@ -86,29 +86,29 @@
         </div>
     </section>
 
-    <section class="menu center">
-        <item class="image-container">
+    <div class="menu center">
+        <div class="image-container">
             <img src="./assets/images/Layer_43.png" alt="for women">
             <div class="menu-text">
                 <p class="offer-text">30% OFF</p>
                 <p class="for-who">FOR WOMEN</p>
             </div>
-        </item>
-        <item class="image-container">
+        </div>
+        <div class="image-container">
             <img src="./assets/images/for_men.png" alt="for men">
             <div class="menu-text">
                 <p class="offer-text">HOT DEAL</p>
                 <p class="for-who">FOR MEN</p>
             </div>
-        </item>
-        <item class="image-container">
+        </div>
+        <div class="image-container">
             <img src="./assets/images/for_kids.png" alt="for kids">
             <div class="menu-text">
                 <p class="offer-text">NEW ARRIVALS</p>
                 <p class="for-who">FOR KIDS</p>
             </div>
-        </item>
-        <item class="item_4 image-container">
+        </div>
+        <div class="item_4 image-container">
             <picture>
                 <source media="(max-width: 767px)" srcset="./assets/images/Categories.png">
                 <img src="./assets/images/ACCESORIES.png" alt="accesories">
@@ -117,8 +117,8 @@
                 <p class="offer-text">LUXIROUS & TRENDY</p>
                 <p class="for-who">ACCESORIES</p>
             </div>
-        </item>
-    </section>
+        </div>
+    </div>
 
     <section class="catalog center">
         <div class="catalog-title">
@@ -247,6 +247,7 @@
 
     <section class="services">
         <div class="services-items center">
+
             <div class="services-items__item">
                 <img class="delivery-icon" src="./assets/images/delivery_icon.svg" alt="delivery_icon">
                 <h4 class="services-items__title">Free Delivery</h4>
@@ -255,6 +256,7 @@
                     tion with extensive models.
                 </p>
             </div>
+
             <div class="services-items__item">
                 <div class="services-items__item">
                     <img class="sales-icon" src="./assets/images/sales_icon.svg" alt="sales_icon">
@@ -265,7 +267,11 @@
                     </p>
                 </div>
             </div>
+
+
+
             <div class="services-items__item">
+
                 <div class="services-items__item">
                     <img class="quality-icon" src="./assets/images/quality_icon.svg" alt="quality_icon">
                     <h4 class="services-items__title">Quality assurance</h4>
@@ -273,17 +279,22 @@
                         innov tion with extensive
                         models.
                 </div>
+
             </div>
+        </div>
     </section>
 
     <section class="subscribe">
+
         <div class="subscribe-items center">
+
             <div class="subscribe-items__descr">
                 <img src="./assets/images/face_foto.svg" alt="face_foto">
                 <p class="subscribe-items__descr__text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span
                         style='font-style:italic;'>a
                         pulvinar</span> purus condimentum“</p>
             </div>
+
             <div class="subscribe-items__form">
                 <h3>SUBSCRIBE</h3>
                 <p>FOR OUR NEWLETTER AND PROMOTION</p>
@@ -292,9 +303,10 @@
                     <input type="submit" value="Subscribe" class="form-submit">
                 </form>
             </div>
-        </div>
 
         </div>
+
+        <!-- </div> -->
 
     </section>
 
